Fix alignment issue on navbar

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -257,6 +257,10 @@ button.register-btn {
     font-weight: 300;
 }
 
+.dropdown-btn {
+    display: none;
+}
+
 main {
     display: flex;
     flex-direction: column;
